[project]
name = "yze"
version = "0.0.4"
authors = [
  { name="Nicolas Legrand", email="nicolas.legrand@gmail.com" },
]
description = "A small package to handle YZE games mechanics"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
]

[project.scripts]
benchmark_mutant = "yze.benchmark_mutant:main"
mutant_odds_of_pushing = "yze.mutant_odds_of_pushing:main"

[project.urls]
"Homepage" = "https://github.com/nlegrand/yze"
"Bug Tracker" = "https://github.com/nlegrand/yze/issues"

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"
